--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sharon's Protfolio</title>
+
+    <link rec = "stylesheet" href = "style.css">
+    <link rec = "stylesheet" href = "mediaquery.css">
+
 </head>
 <body>
     <h1>Sharon Kadamandla</h1>
+
+    <script src="script.js"></script>
 </body>
 </html> 
