--- a/index.html
+++ b/index.html
@@ -76,7 +76,58 @@
         </div>
     </section>
 
+    <section id="about">
+        <p class="section__text__p1">Get To Know More</p>
+        <h1 class="title">About Me</h1>
+        <div class="section-container">
+          <div class="section__pic-container">
+            <!-- <img
+              src="./assets/about-pic.png"
+              alt="Profile picture"
+              class="about-pic"
+            /> -->
+          </div>
+          <div class="about-details-container">
+            <div class="about-containers">
+              <div class="details-container">
+                <img
+                  src="./assets/experience.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <h3>Experience</h3>
+                <p>1+ years <br />Backend Developer</p>
+              </div>
+              <div class="details-container">
+                <img
+                  src="./assets/education.png"
+                  alt="Education icon"
+                  class="icon"
+                />
+                <h3>Education</h3>
+                <p>Bachelors in Computer Science Engineering<br />PG Diploma in AI, Data Analysis</p>
+              </div>
+            </div>
+            <div class="text-container">
+              <p>
+                Hey there, I'm Sharon! I like to think of myself as a lifelong learner who is constantly seeking new challenges and opportunities for growth. 
+                I graduated with a Bachelor of Technology in Computer Science Engineering in 2022, and during my studies, I had the privilege of working as a Teaching Assistant. As a TA, I helped students tackle complex Data Structures and Algorithms with ease, and encouraged them to develop strong problem solving skills. 
+                After completing my degree, I landed an internship at Virtusa, a multinational company, where I was able to put my skills into practice. I enjoyed the fast-paced environment and dynamic team, so when the opportunity to become a full-time employee presented itself, I jumped at the chance.
+                As a passioate advocate for emerging technologies. I finished AI post-graduation certification program in Canada, with a honours for 4.5/5 GPA.
+              </p>
+            </div>
+          </div>
+        </div>
+        <img
+          src="./assets/arrow.png"
+          alt="Arrow icon"
+          class="icon arrow"
+          onclick="location.href='./#experience'"
+        />
+    </section>
 
+
+    
     <script src="script.js"></script>
 </body>
 </html> 
