--- a/index.html
+++ b/index.html
@@ -95,8 +95,10 @@
                   alt="Experience icon"
                   class="icon"
                 />
-                <h3>Experience</h3>
-                <p>1+ years <br />Backend Developer</p>
+                <h3>Experience</h3><br />
+                <p>Associate Engineer Technology (1+ years) <br /><a href="https://www.virtusa.com">Virtusa,</a> India</p><br /> 
+                
+                <p>Intern Delivery (4 months)<br /><a href="https://www.virtusa.com">Virtusa,</a> India</p>
               </div>
               <div class="details-container">
                 <img
@@ -104,16 +106,19 @@
                   alt="Education icon"
                   class="icon"
                 />
-                <h3>Education</h3>
-                <p>Bachelors in Computer Science Engineering<br />PG Diploma in AI, Data Analysis</p>
+                <h3>Education</h3><br />
+                <p>Bachelors in Computer Science Engineering</p><br />
+                <p>PG Diploma in AI Analysis, Design & Implementation</p><br />
+                <p>PG Diploma in Data Analysis for Business Decision Making</p>
               </div>
             </div>
             <div class="text-container">
               <p>
-                Hey there, I'm Sharon! I like to think of myself as a lifelong learner who is constantly seeking new challenges and opportunities for growth. 
-                I graduated with a Bachelor of Technology in Computer Science Engineering in 2022, and during my studies, I had the privilege of working as a Teaching Assistant. As a TA, I helped students tackle complex Data Structures and Algorithms with ease, and encouraged them to develop strong problem solving skills. 
-                After completing my degree, I landed an internship at Virtusa, a multinational company, where I was able to put my skills into practice. I enjoyed the fast-paced environment and dynamic team, so when the opportunity to become a full-time employee presented itself, I jumped at the chance.
-                As a passioate advocate for emerging technologies. I finished AI post-graduation certification program in Canada, with a honours for 4.5/5 GPA.
+                Hi, I'm Sharon Kadamandla, a passionate Software Developer and Data Analyst with a strong background in backend development, API design, and data analytics. With experience in Java, Kotlin, Python, and C++, I specialize in building scalable applications, optimizing system performance, and working with cloud-based technologies like AWS and Docker.
+
+I have worked at Virtusa as an Associate Engineer, contributing to enterprise-level software solutions using Spring Boot, Microservices. My expertise extends to SQL, Tableau, and machine learning, making me adept at data-driven decision-making.
+
+I enjoy solving complex problems, collaborating in teams, and mentoring students in Data Structures & Algorithms. Explore my projects, certifications, and achievements, and feel free to connect!
               </p>
             </div>
           </div>
