--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 class="btn btn-color-2"
                 onclick="window.open('./assets/resume.pdf')"
               >
-                Download Resume
+                Resume
               </button>
               <button class="btn btn-color-1" onclick="location.href='./#contact'">
                 Contact Info
@@ -95,10 +95,10 @@
                   alt="Experience icon"
                   class="icon"
                 />
-                <h3>Experience</h3><br />
-                <p>Associate Engineer Technology (1+ years) <br /><a href="https://www.virtusa.com">Virtusa,</a> India</p><br /> 
+                <h3>Experience (Almost 2 Years)</h3><br />
+                <p>Associate Engineer Technology (2022-23) <br /><a href="https://www.virtusa.com">Virtusa,</a> India</p><br /> 
                 
-                <p>Intern Delivery (4 months)<br /><a href="https://www.virtusa.com">Virtusa,</a> India</p>
+                <p>Intern Delivery (2022-22)<br /><a href="https://www.virtusa.com">Virtusa,</a> India</p>
               </div>
               <div class="details-container">
                 <img
