--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ I enjoy solving complex problems, collaborating in teams, and mentoring students
 
     <section id="experience">
         <p class="section__text__p1">Explore My</p>
-        <h1 class="title">Experience</h1>
+        <h1 class="title">Skills</h1>
         <div class="experience-details-container">
           <div class="about-containers">
             <div class="details-container">
