--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                   alt="Experience icon"
                   class="icon"
                 />
-                <h3>Experience (Almost 2 Years)</h3><br />
+                <h3>Experience (1+ Years)</h3><br />
                 <p>Associate Engineer Technology (2022-23) <br /><a href="https://www.virtusa.com">Virtusa,</a> India</p><br /> 
                 
                 <p>Intern Delivery (2022-22)<br /><a href="https://www.virtusa.com">Virtusa,</a> India</p>
