--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 
                 <p>Internship (2022-22)<br /><a href="https://www.virtusa.com">Virtusa,</a> India</p><br />
 
-                <p>Teaching Assistant<br /><a href="https://smartinterviews.in">Smart Interviews,</a> India</p>
+                <p>Teaching Assistant (2021-22)<br /><a href="https://smartinterviews.in">Smart Interviews,</a> India</p>
               </div>
               <div class="details-container">
                 <img
@@ -109,8 +109,8 @@
                   class="icon"
                 />
                 <h3>Education</h3><br />
-                <p>Bachelors in Computer Science Engineering</p><br />
-                <p>PG Diploma in AI Analysis, Design & Implementation</p><br />
+                <p>Bachelors in Computer Science Engineering</p><br /><br />
+                <p>PG Diploma in AI Analysis, Design & Implementation</p><br /><br />
                 <p>PG Diploma in Data Analysis for Business Decision Making</p>
               </div>
             </div>
