--- a/index.html
+++ b/index.html
@@ -109,9 +109,11 @@
                   class="icon"
                 />
                 <h3>Education</h3><br />
-                <p>Bachelors in Computer Science Engineering</p><br /><br />
-                <p>PG Diploma in AI Analysis, Design & Implementation</p><br /><br />
-                <p>PG Diploma in Data Analysis for Business Decision Making</p>
+                <p>PG Diploma in Data Analysis for Business Decision Making <br/> <em> Graduated with Honours</em> (2024-25) </p><br />
+               
+                <p>PG Diploma in AI Analysis, Design & Implementation <br /> <em>Graduated with Honours</em>  (2023-24)</p><br />
+                <p>Bachelors in Computer Science Engineering<br/>(2018-22)</p>
+                
               </div>
             </div>
             <div class="text-container">
