--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/profilepic.jpeg" alt="Sharon's profile picture"/>
+            <img src="./assets/profilepic.jpg" alt="Sharon's profile picture"/>
         </div>
         <div class="section__text">
             <p class="section__text__p1">I'm</p>
@@ -118,11 +118,11 @@
             </div>
             <div class="text-container">
               <p>
-                Hi, I'm Sharon Kadamandla, a passionate Software Developer and Data Analyst with a strong background in backend development, API design, and data analytics. With experience in Java, Kotlin, Python, and C++, I specialize in building scalable applications, optimizing system performance, and working with cloud-based technologies like AWS and Docker.
-
-I have worked at Virtusa as an Associate Engineer, contributing to enterprise-level software solutions using Spring Boot, Microservices. My expertise extends to SQL, Tableau, and machine learning, making me adept at data-driven decision-making.
-
-I enjoy solving complex problems, collaborating in teams, and mentoring students in Data Structures & Algorithms. Explore my projects, certifications, and achievements, and feel free to connect!
+                I design and build fast and reliable back-end services, crafting user-friendly front-ends.
+                Over my year and a half with Virtusa, I’ve containerized and shipped microservice APIs using Docker, and supported releases for enterprise clients. During my free time, I rebuilt my church’s website end-to-end, moving it from hard code to Wix and handling everything from structure to launch.
+                My bread and butter is Python & Spring Boot, with some side projects exploring NLP and Power BI dashboards because great products run on both scalable code and actionable insight.
+              
+              
               </p>
             </div>
           </div>
