updated social logos

--- a/index.html
+++ b/index.html
@@ -62,16 +62,22 @@
             </div>
             <div id="socials-container">
               <img
-                src="./assets/linkedin.webp"
+                src="./assets/linkedin.png"
                 alt="My LinkedIn profile"
-                class="icon"
+                class="socials-icon"
                 onclick="location.href='https://www.linkedin.com/in/sharonkadamandla/'"
               />
               <img
                 src="./assets/github.png"
                 alt="My Github profile"
-                class="icon"
+                class="socials-icon"
                 onclick="location.href='https://github.com/sharonkadamandla'"
+              />
+              <img
+                src="./assets/cross.png"
+                alt="Faith Statement"
+                class="socials-icon"
+                onclick="location.href='faithstatement.html'"
               />
             </div>
         </div>
@@ -421,7 +427,7 @@
               alt="Email icon"
               class="icon contact-icon email-icon"
             />
-            <p><a href="mailto:examplemail@gmail.com">sharon.kadamandla@gmail.com</a></p>
+            <p><a href="mailto:sharon.kadamandla@gmail.com">sharon.kadamandla@gmail.com</a></p>
           </div>
           <div class="contact-info-container">
             <img
