--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
 <body>
     
     <nav id="desktop-nav">
-        <div class ="logo">Sharon Kadamandla</div>
+      <header class="sticky-header">
+        <h1 class ="logo">Sharon Kadamandla</h1>
+        <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+      </header>
+        <!-- <div class ="logo">Sharon Kadamandla</div>
         <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
@@ -20,7 +29,7 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-        </div>
+        </div> -->
     </nav>
 
     <nav id="hamburger-nav">
@@ -431,7 +440,7 @@
           </div>
           <div class="contact-info-container">
             <img
-              src="./assets/linkedin.webp"
+              src="./assets/linkedin.png"
               alt="LinkedIn icon"
               class="icon contact-icon"
             />
